mobile footer and contrast fixes

--- a/src/sources/forus-webshop/scss/_common/components/_form.scss
+++ b/src/sources/forus-webshop/scss/_common/components/_form.scss
@@ -51,7 +51,7 @@ $formPadding: 14px 15px;
         &:focus {
             outline: none;
             background-color: #F8F8F8;
-            border: 1px solid #bababa;
+            border: 1px solid #515152;
         }
 
         &.form-control-fancy {
