--- a/src/sources/forus-webshop/scss/_common/components/_ui-controls.scss
+++ b/src/sources/forus-webshop/scss/_common/components/_ui-controls.scss
@@ -29,7 +29,6 @@ $tf: uppercase;
     .form-control:not([type="radio"]):not([type="checkbox"]) {
         appearance: none;
         background: #eff2f4;
-        border-color: #eff2f4;
     
         &::-webkit-outer-spin-button,
         &::-webkit-inner-spin-button {
